fixed un readable css conditions

--- a/style.css
+++ b/style.css
@@ -225,13 +225,13 @@ header {
   pointer-events: all;
 }
 
-.container.vertical .card:not(:nth-of-type(2n+1)) {
+.container.vertical .card:nth-of-type(2n) {
   align-self: flex-end;
 }
 
 .card .signal {
   height: 1rem;
-  aspect-ratio: 1;
+  width: 1rem;
   background-color: var(--gray);
   border-radius: 50%;
   position: absolute;
@@ -300,7 +300,7 @@ header {
     margin-top: 2rem;
   }
 
-  .container.vertical .card:not(:nth-of-type(2n+1)) {
+  .container.vertical .card:nth-of-type(2n) {
     align-self: unset;
   }
 
@@ -312,7 +312,7 @@ header {
     z-index: 5;
   }
 
-  .container.vertical .card:not(:nth-of-type(2n+1)) .signal {
+  .container.vertical .card:nth-of-type(2n) .signal {
     left: unset;
     right: 50%;
     transform: translate(50%) !important;
